--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "bootstrap": "^5.3.1",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
